# langgraph-hierarchies-irs-demo

./: .env.example  .gitignore  DESIGN.md  LICENSE  README.md  pyproject.toml
src/examples/: __init__.py
src/examples/example_01_artifact_handoff/: __init__.py  __main__.py  agents.py  model.py  policy.py  state.py  tools.py  tracing.py
src/examples/example_01_artifact_handoff/fixtures/: extraction_artifact.json  invoice_fail.txt  invoice_ok.txt  raw_fail.txt  raw_ok.txt
tests/: test_01_artifact_handoff.py
