[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langgraph-hierarchies-irs-demo"
version = "0.1.0"
description = "Article companion: realistic IRS tax-prep demo built on langgraph-hierarchies"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "langgraph==1.2.6",
    "langgraph-hierarchies==0.0.2",
    "langchain-openai>=0.3",
    "faker>=37.0",
    "reportlab>=4.0",
    "pandas>=2.0",
    "Pillow>=11.0",
    "python-dateutil>=2.9",
]

[project.urls]
Homepage = "https://github.com/korrino222/langgraph-hierarchies-irs-demo"
Repository = "https://github.com/korrino222/langgraph-hierarchies-irs-demo"
Library = "https://github.com/korrino222/langgraph-hierarchies"

[project.scripts]
irs-demo = "irs_demo.hierarchy:main"

[tool.portfolio]
owner = "korrino222"
repo = "langgraph-hierarchies-irs-demo"
status = "active"
parent_library = "langgraph-hierarchies"

[dependency-groups]
test = [
    "pytest>=8.0",
]
lint = [
    "ruff>=0.9",
]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["src/irs_demo"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--strict-markers --strict-config"
markers = [
    "demo: IRS demo regression tests",
    "llm: requires OPENAI_API_KEY or ANTHROPIC_API_KEY",
    "scripted: RuleBasedModel deterministic path",
]
